--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "takudu",
+  "name": "taskudu",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@hookform/resolvers": "^5.2.2",
+    "@next-safe-action/adapter-react-hook-form": "^2.0.0",
     "@prisma/client": "^6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -19,9 +24,14 @@
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-auth": "^5.0.0-beta.30",
+    "next-safe-action": "^8.0.11",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.3.1"
+    "react-hook-form": "^7.65.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
