--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
+    "next": "^16.0.8",
     "next-auth": "^5.0.0-beta.30",
     "next-safe-action": "^8.0.11",
     "next-themes": "^0.4.6",
